--- a/oauth/docker-compose.yaml
+++ b/oauth/docker-compose.yaml
@@ -1,17 +1,18 @@
 version: '3'
 
 services:
-  redoc:
-    container_name: redoc
-    image: 'airdb/redoc:latest'
+  alpine:
+    container_name: alpine
     platform: linux/amd64
+    working_dir: /srv/
     build:
       context: .
       dockerfile: Dockerfile
-    #command: sleep 3600
+    image: 'airdb/alpine:latest'
+    command: sleep 3600
     volumes:
-      - ./:/srv/toolbox
+      - ./:/srv/alpine
     ports:
-      - "8080:9090"
+      - "8080:8080"
     environment:
       - env=test
