--- a/toolbox/Makefile
+++ b/toolbox/Makefile
@@ -13,7 +13,7 @@ help: ## Show help messages
 
 up: ## Create and start containers
 	docker compose up -d --build --force-recreate
-build: ## Build or rebuild services
+build: ## Build or rebuild docker image
 	docker compose build --no-cache
 
 start: ## Start services
