--- a/dotnet/Dockerfile
+++ b/dotnet/Dockerfile
@@ -1,5 +1,6 @@
 FROM mcr.microsoft.com/dotnet/sdk:5.0 AS build-env
-docker pull mcr.microsoft.com/dotnet/aspnet
+#docker pull mcr.microsoft.com/dotnet/aspnet
+
 WORKDIR /app
 
 # Copy csproj and restore as distinct layers
@@ -11,7 +12,9 @@ COPY ../engine/examples ./
 RUN dotnet publish -c Release -o out
 
 # Build runtime image
-FROM mcr.microsoft.com/dotnet/aspnet:8.0
+# https://hub.docker.com/r/ubuntu/dotnet-aspnet/tags
+FROM ubuntu/dotnet-aspnet:8.0_edge
+
 WORKDIR /app
 COPY --from=build-env /app/out .
 ENTRYPOINT ["dotnet", "aspnetapp.dll"]
