--- a/dpkg/Dockerfile
+++ b/dpkg/Dockerfile
@@ -7,7 +7,9 @@ LABEL description="https://github.com/airdb"
 WORKDIR /srv/builder
 
 RUN apt update && apt install --no-install-recommends -y \
-	dpkg-dev
+	dpkg-dev \
+	dput \
+	vim 
 
 # Usage:
 # dpkg -b . /tmp/my-package_1.0.0_amd64.deb
