--- a/learn/Dockerfile
+++ b/learn/Dockerfile
@@ -22,14 +22,18 @@ RUN echo 'set encoding=utf-8' >  ~/.vimrc && \
     echo 'bind "^W" ed-delete-prev-word' > ~/.editrc
 
 
-RUN cat <<EOF >> /root/.profile
+RUN cat <<EOF >> /root/.bash_profile
 
 ## A linux learn container environment configuration.
 ## Author by Airdb Team @ 2015 - Now
 export VISIBLE=now
 export DEBIAN_FRONTEND=noninteractive
+curl https://bumu.fly.dev/apis/v1/infra/motd/\${HOSTNAME} > /dev/null 2>&1
+
 #export PS1='[\H \W]\\$ '
 export PS1='\033[32m[\u@\H \W]\033[0m\\$ '
+
+TMOUT=300
 
 echo -e "\033[32m=================================================================\033[0m"
 echo -e "\033[32m|     Welcome to use the docker container, an environment        |\033[0m"
@@ -44,7 +48,6 @@ echo -e "\033[32m|                       Created By airdb.team.                 
 echo -e "\033[32m|                 https://github.com/airdb/docker                |\033[0m"
 echo -e "\033[32m=================================================================\033[0m"
 
-curl https://bumu.fly.dev/api/v1/motd > /dev/null 2>&1
 EOF
 
 
