--- a/nginx/Makefile
+++ b/nginx/Makefile
@@ -1,7 +1,18 @@
 SERVICE := nginx
 
+all: help
+
+help: ## Show help messages
+	@echo "Container - ${SERVICE} "
+	@echo
+	@echo "Usage:\tmake COMMAND"
+	@echo
+	@echo "Commands:"
+	@sed -n '/##/s/\(.*\):.*##/  \1#/p' ${MAKEFILE_LIST} | grep -v "MAKEFILE_LIST" | column -t -c 2 -s '#'
+
 up:
 	docker compose up -d --build --force-recreate
+
 build:
 	docker compose build --no-cache
 
