--- a/python/docker-compose.yaml
+++ b/python/docker-compose.yaml
@@ -10,6 +10,8 @@ services:
       context: .
       dockerfile: Dockerfile
     command: sleep 3600
+    volumes:
+      - ./:/srv/ubuntu
     ports:
       - "8080:8080"
     environment:
