--- a/redis/Dockerfile
+++ b/redis/Dockerfile
@@ -1,5 +1,5 @@
 FROM  airdb/alpine
-MAINTAINER  Dean <Dean@airdb.com>
+LABEL maintainer="https://github.com/airdb"
 
 # Build image: 
 # docker build . --rm -t airdb/alpine-nginx -f  nginx.dockerfile
