--- a/nodejs/Dockerfile
+++ b/nodejs/Dockerfile
@@ -1,4 +1,4 @@
-FROM node
+FROM node:latest
 
 LABEL maintainer="https://github.com/airdb"
 
@@ -9,7 +9,7 @@ RUN git clone https://github.com/airdb/fcweb
 
 WORKDIR /srv/fcweb
 RUN npm config set registry https://registry.npm.taobao.org
-RUN npm install
-RUN npm run build
+RUN npm install && \
+    npm run build
 
 CMD ["/bin/bash"]
