--- a/lnmp/Dockerfile.ubuntu.php71
+++ b/lnmp/Dockerfile.ubuntu.php71
@@ -1,5 +1,5 @@
 FROM ubuntu:22:04
-MAINTAINER  airdb.com
+LABEL MAINTAINER="airdb.com"
 
 ENV NOTVISIBLE "in users profile"
 RUN echo "export VISIBLE=now" >> /etc/profile
