--- a/os/tencent/Dockerfile
+++ b/os/tencent/Dockerfile
@@ -11,3 +11,5 @@ RUN echo "export VISIBLE=now" >> /etc/profile && \
 
 RUN echo "export PS1='[\H \W]\\$ '" >> /root/.profile && \
 	echo 'export HISTTIMEFORMAT="%Y-%m-%d %T $(pwd)" ' >> /etc/profile
+
+RUN sed -i 's/archive.ubuntu.com/mirrors.cloud.tencent.com/g' /etc/apt/sources.list
