--- a/os/alpine/docker-compose.yaml
+++ b/os/alpine/docker-compose.yaml
@@ -1,5 +1,3 @@
-version: '3'
-
 services:
   alpine:
     container_name: alpine
@@ -8,7 +6,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    image: 'airdb/alpine:latest'
+    image: "airdb/alpine:latest"
     command: sleep 3600
     volumes:
       - ./:/srv/alpine
