--- a/sshd/docker-compose.yaml
+++ b/sshd/docker-compose.yaml
@@ -1,8 +1,7 @@
-version: '3.3'
 services:
   sshd:
     container_name: sshd
-    image: 'airdb/sshd:latest'
+    image: "airdb/sshd:latest"
     build:
       context: .
       dockerfile: Dockerfile
