--- a/builder/alpine-go/docker-compose.yaml
+++ b/builder/alpine-go/docker-compose.yaml
@@ -1,8 +1,7 @@
-version: '3.9'
 services:
   builder:
     container_name: builder
-    image: 'airdb/builder:alpine-go1.21'
+    image: "airdb/builder:alpine-go1.21"
     build:
       context: .
       dockerfile: Dockerfile
