--- a/builder/xcaddy/docker-compose.yaml
+++ b/builder/xcaddy/docker-compose.yaml
@@ -1,8 +1,7 @@
-version: '3.3'
 services:
   builder:
     container_name: builder
-    image: 'airdb/builder:xcaddy'
+    image: "airdb/builder:xcaddy"
     build:
       context: .
       dockerfile: Dockerfile
