--- a/db/mysql-8/docker-compose.yaml
+++ b/db/mysql-8/docker-compose.yaml
@@ -1,9 +1,7 @@
-version: '3'
-
 services:
   testdb8:
     container_name: testdb8
-    image: 'mysql:8'
+    image: "mysql:8"
     command: --default-authentication-plugin=mysql_native_password --init-file /srv/sql/init.sql
     volumes:
       - ./:/srv/sql/
@@ -12,7 +10,7 @@ services:
       - "3306:3306"
     environment:
       TZ: Asia/Shanghai
-      MYSQL_ROOT_HOST: '%'
+      MYSQL_ROOT_HOST: "%"
       MYSQL_ROOT_PASSWORD: root
       MYSQL_DATABASE: test
       MYSQL_USER: airdb
