--- a/python/docker-compose.yaml
+++ b/python/docker-compose.yaml
@@ -1,10 +1,8 @@
-version: '3'
-
 services:
   python:
     container_name: python
     platform: linux/amd64
-    image: 'airdb/python:latest'
+    image: "airdb/python:latest"
     working_dir: /app/python
     build:
       context: .
