--- a/os/alpine/docker-compose.yaml
+++ b/os/alpine/docker-compose.yaml
@@ -9,7 +9,7 @@ services:
     image: "airdb/alpine:latest"
     command: sleep 3600
     volumes:
-      - ./:/srv/alpine
+      - ./:/opt/alpine
     ports:
       - "8080:8080"
     environment:
