--- a/lang/python/Dockerfile
+++ b/lang/python/Dockerfile
@@ -1,9 +1,13 @@
-FROM python:3.12.5
+FROM python:3.13.0
 
-WORKDIR /app/python
+WORKDIR /app/
+COPY . /app/
 
-COPY . /app/python/
+RUN pip install --no-cache-dir --upgrade pip && \
+	pip3 install --no-cache-dir -r requirements.txt
 
-RUN pip3 install --no-cache-dir -r requirements.txt
+RUN cp /usr/share/zoneinfo/Asia/Shanghai /etc/localtime && \
+    echo "export PS1='python@\H \w\\$ '" >> /etc/profile
+
 
 #CMD ["/bin/bash", "--login"]
