--- a/os/docker-compose.yaml
+++ b/os/docker-compose.yaml
@@ -2,14 +2,14 @@ services:
   alpine:
     container_name: alpine
     platform: linux/amd64
-    working_dir: /srv/
+    working_dir: /opt/
     build:
-      context: .
+      context: ./alpine/
       dockerfile: Dockerfile
     image: "airdb/alpine:latest"
     command: sleep 3600
     volumes:
-      - ./:/opt/alpine
+      - ./alpine:/opt/alpine
     #ports:
     #  - "8080:8080"
     environment:
@@ -46,31 +46,32 @@ services:
   tencent:
     container_name: tencent
     platform: linux/amd64
-    working_dir: /srv/
+    working_dir: /opt/tencent
     build:
       context: ./tencent/
       dockerfile: Dockerfile
     image: "airdb/tencent:latest"
     command: sleep 3600
     volumes:
-      - ./:/srv/ubuntu
+      - ./:/opt/tencent
     #ports:
     #  - 8080:8080
     environment:
       - env=test
     profiles:
       - tencent
+
   aliyun:
     container_name: aliyun
     platform: linux/amd64
-    working_dir: /srv/
+    working_dir: /opt/
     build:
       context: ./aliyun/
       dockerfile: Dockerfile
     image: "airdb/aliyun:latest"
     command: sleep 3600
     volumes:
-      - ./:/srv/ubuntu
+      - ./:/opt/aliyun
     #ports:
     #  - 8080:8080
     environment:
