--- a/os/alpine/Dockerfile
+++ b/os/alpine/Dockerfile
@@ -6,7 +6,9 @@ LABEL description="https://github.com/airdb/docker"
 ENV AIRDB_RUNNING_CONTEXT docker
 
 RUN apk add --no-cache --virtual .build-deps \
-    tzdata tar gzip bash bash-completion ca-certificates
+    tzdata tar gzip \
+    netcat-openbsd \
+    bash bash-completion ca-certificates
 
 # Setup bash as default shell.
 RUN cp /usr/share/zoneinfo/Asia/Shanghai /etc/localtime && \
